--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Lenovo" src="img/lenovo.png">
+                        <img alt="Lenovo" src="/img/lenovo.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Samsung" src="img/samsung.png">
+                        <img alt="Samsung" src="/img/samsung.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Apple" src="img/apple.png">
+                        <img alt="Apple" src="/img/apple.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img  alt="Viewsonic" src="img/viewsonic.png">
+                        <img  alt="Viewsonic" src="/img/viewsonic.png">
                         <img alt="go" src="img/go.png">
                     </div>
 
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Bosch" src="img/bosch.png">
+                        <img alt="Bosch" src="/img/bosch.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
@@ -96,55 +96,55 @@
     </div>
     <div class="slider__big">
         <div class="slider__item">
-            <img alt="Lenovo" src="img/lenovo.png">
+            <img alt="Lenovo" src="/img/lenovo.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Samsung" src="img/samsung.png">
+            <img alt="Samsung" src="/img/samsung.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Apple" src="img/apple.png">
+            <img alt="Apple" src="/img/apple.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img  alt="Viewsonic" src="img/viewsonic.png">
+            <img  alt="Viewsonic" src="/img/viewsonic.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Bosch" src="img/bosch.png">
+            <img alt="Bosch" src="/img/bosch.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="HP" src="img/hp.png">
+            <img alt="HP" src="/img/hp.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Acer" src="img/acer.png">
+            <img alt="Acer" src="/img/acer.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Sony" src="img/sony.png">
+            <img alt="Sony" src="/img/sony.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Lenovo" src="img/lenovo.png">
+            <img alt="Lenovo" src="/img/lenovo.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Samsung" src="img/samsung.png">
+            <img alt="Samsung" src="/img/samsung.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Apple" src="img/apple.png">
+            <img alt="Apple" src="/img/apple.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-          <img alt="Lenovo" src="img/Lenovo.png">
+          <img alt="Lenovo" src="/img/Lenovo.png">
           <img alt="go" src="img/go.png">
       </div>
       <div class="slider__item">
-        <img alt="Samsung" src="img/Samsung.png">
+        <img alt="Samsung" src="/img/Samsung.png">
         <img alt="go" src="img/go.png">
     </div>
     </div>
