--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Lenovo" src="img/lenovo.png">
+                        <img alt="Lenovo" src="img/Lenovo.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
