--- a/index.html
+++ b/index.html
@@ -104,39 +104,39 @@
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Apple" src="img/apple.png">
+            <img alt="Apple" src="img/Apple.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img  alt="Viewsonic" src="img/viewsonic.png">
+            <img  alt="Viewsonic" src="img/ViewSonic.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Bosch" src="img/bosch.png">
+            <img alt="Bosch" src="img/Bosch.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="HP" src="img/hp.png">
+            <img alt="HP" src="img/HP.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Acer" src="img/acer.png">
+            <img alt="Acer" src="img/ACER.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Sony" src="img/sony.png">
+            <img alt="Sony" src="img/SONY.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Lenovo" src="img/lenovo.png">
+            <img alt="Lenovo" src="img/Lenovo.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Samsung" src="img/samsung.png">
+            <img alt="Samsung" src="img/Samsung.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Apple" src="img/apple.png">
+            <img alt="Apple" src="img/Apple.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
