--- a/index.html
+++ b/index.html
@@ -31,62 +31,62 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Samsung" src="img/samsung.png">
+                        <img alt="Samsung" src="img/Samsung.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Apple" src="img/apple.png">
+                        <img alt="Apple" src="img/Apple.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img  alt="Viewsonic" src="img/viewsonic.png">
+                        <img  alt="Viewsonic" src="img/ViewSonic.png">
                         <img alt="go" src="img/go.png">
                     </div>
 
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Bosch" src="img/bosch.png">
+                        <img alt="Bosch" src="img/Bosch.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="HP" src="img/hp.png">
+                        <img alt="HP" src="img/HP.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="ACER" src="img/acer.png">
+                        <img alt="ACER" src="img/ACER.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Sony" src="img/sony.png">
+                        <img alt="Sony" src="img/Sony.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Lenovo" src="img/lenovo.png">
+                        <img alt="Lenovo" src="img/Lenovo.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Samsung" src="img/samsung.png">
+                        <img alt="Samsung" src="img/Samsung.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Apple" src="img/apple.png">
+                        <img alt="Apple" src="img/Apple.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
@@ -96,11 +96,11 @@
     </div>
     <div class="slider__big">
         <div class="slider__item">
-            <img alt="Lenovo" src="img/lenovo.png">
+            <img alt="Lenovo" src="img/Lenovo.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
-            <img alt="Samsung" src="img/samsung.png">
+            <img alt="Samsung" src="img/Samsung.png">
             <img alt="go" src="img/go.png">
         </div>
         <div class="slider__item">
