--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="slider__item">
-                        <img alt="Sony" src="img/Sony.png">
+                        <img alt="Sony" src="img/SONY.png">
                         <img alt="go" src="img/go.png">
                     </div>
                 </div>
